--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-	"name": "react-ts",
-	"private": true,
-	"version": "0.0.0",
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "tsc && vite build",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
-	},
-	"devDependencies": {
-		"@types/react": "^18.0.27",
-		"@types/react-dom": "^18.0.10",
-		"@vitejs/plugin-react-swc": "^3.0.0",
-		"typescript": "^4.9.3",
-		"vite": "^4.1.0"
-	}
+    "name": "tip-calculator",
+    "version": "0.1.0",
+    "homepage": "https://rivasjoaquin02.github.io/tip-calculator/",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
+    "devDependencies": {
+        "gh-pages": "^5.0.0",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
+        "@vitejs/plugin-react-swc": "^3.0.0",
+        "typescript": "^4.9.3",
+        "vite": "^4.1.0"
+    }
 }
